Fixed text alignment on mobile

--- a/cmd/web/assets/css/output.css
+++ b/cmd/web/assets/css/output.css
@@ -639,10 +639,6 @@ video {
   margin-top: 0.25rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -653,6 +649,10 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
